# MotionTracking_MK-II_Plus

./: .editorconfig  .gitignore  MotionTrackingMKII.sln  Original_Readme.txt  README.ja.md  README.md
.github/workflows/: CI.yml  build.yml
MotionTrackingMKII/: MotionTrackingMKII.vcxproj  main.cpp
src/: CMakeLists.txt  bgs.cpp  bgs.h  filter.h  hsv.cpp  hsv.h  main.cpp  main.def  main.h  resource.h  resource.rc
